--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "homepage":"http://SREESURYA75.github.io/projectwebsite",
   "name": "project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/SREESURYA75/Project-react.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,12 +19,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    
+    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
